fixed typo classes.test.dir to fix build and update image submission

--- a/hello-world/build.xml
+++ b/hello-world/build.xml
@@ -63,7 +63,7 @@
 		<classpath>
 				<fileset refid="test.classpath"/>
 				<pathelement path="${classes.dir}" />
-				<pathelement path="${classes.test.dirb}" />
+				<pathelement path="${classes.test.dir}" />
 			</classpath>
 	  </javac>
 	</target>
@@ -79,7 +79,7 @@
 			<classpath>
 				<fileset refid="test.classpath"/>
 				<pathelement path="${classes.dir}" />
-				<pathelement path="${classes.test.dirb}" />
+				<pathelement path="${classes.test.dir}" />
             </classpath>
 			<formatter type="plain" />        
             <batchtest fork="yes" todir="${reports.dir}">
